# Roary_viz_part_2

./: .coverage  .env.example  BUSINESS_CASE.md  Dockerfile  INSTALL.md  INVESTORS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
demo_data/: README.md  summary_statistics.txt
deployment/: configure.py  docker-entrypoint.sh  maintain.py
src/roary_visualizer.egg-info/: PKG-INFO  SOURCES.txt
src/roary_visualizer/app/: main.py
src/roary_visualizer/config/: settings.py
src/roary_visualizer/config/logging/: config.py
src/roary_visualizer/config/monitoring/: prometheus.py
src/roary_visualizer/config/performance/: config.py  monitoring.py
src/roary_visualizer/core/: data_processor.py  visualization.py
src/roary_visualizer/middleware/: __init__.py  error_handler.py  performance.py
src/roary_visualizer/models/: data_models.py
src/roary_visualizer/utils/: file_handler.py
tests/: conftest.py
tests/test_config/: test_logging_config.py  test_performance_config.py  test_performance_monitoring.py  test_prometheus.py
tests/test_core/: test_data_processor.py  test_visualization.py
tests/test_middleware/: test_error_handler.py
tests/test_utils/: test_file_handler.py
