[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "roary-visualizer"
version = "1.0.0"
description = "A production-ready web application for visualizing Roary pangenome analysis output"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Bioinformatics Team"}
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "node_modules", ".mypy_cache", ".pytest_cache"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/roary_visualizer --cov-report=html"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests that check performance"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
source = ["src/roary_visualizer"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\."
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
    "C0330"   # wrong-hanging-indentation
]
ignore = [".git", "node_modules", ".mypy_cache", ".pytest_cache"]
ignore-patterns = ["^\\.#"]
persistent = "yes"
unsafe-load-any-extension = "no"
output-format = "colorized"
reports = "no"
score = "no"

extension-pkg-whitelist = [
    "numpy",
    "pandas"
]

[tool.setuptools_scm]
write_to = "src/roary_visualizer/_version.py"